--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,18 @@
     <servlet-name>FrontController</servlet-name>
     <url-pattern>/FrontController</url-pattern>
   </servlet-mapping>
+  <!-- Form Encoding Setter Filter-->
+  <filter>
+    <filter-name>FormEncodingSetterFilter</filter-name>
+    <filter-class>by.asrohau.shop.controller.FormEncodingSetterFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>FormEncodingSetterFilter</filter-name>
+    <url-pattern>/i18n-tutorial/*</url-pattern>
+  </filter-mapping>
+  <!-- Form Encoding Setter Filter           END-->
 </web-app>
