--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,20 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <!-- Form Encoding Setter Filter-->
+  <filter>
+    <filter-name>FormEncodingSetterFilter</filter-name>
+    <filter-class>by.asrohau.shop.controller.filter.FormEncodingSetterFilter</filter-class>
+    <init-param>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>FormEncodingSetterFilter</filter-name>
+    <url-pattern>/FrontController</url-pattern>
+  </filter-mapping>
+  <!-- Form Encoding Setter Filter           END-->
   <servlet>
     <description></description>
     <display-name>FrontController</display-name>
@@ -19,20 +33,7 @@
     <servlet-name>FrontController</servlet-name>
     <url-pattern>/FrontController</url-pattern>
   </servlet-mapping>
-  <!-- Form Encoding Setter Filter-->
-  <filter>
-    <filter-name>FormEncodingSetterFilter</filter-name>
-    <filter-class>by.asrohau.shop.controller.FormEncodingSetterFilter</filter-class>
-    <init-param>
-      <param-name>encoding</param-name>
-      <param-value>UTF-8</param-value>
-    </init-param>
-  </filter>
-  <filter-mapping>
-    <filter-name>FormEncodingSetterFilter</filter-name>
-    <url-pattern>/i18n-tutorial/*</url-pattern>
-  </filter-mapping>
-  <!-- Form Encoding Setter Filter           END-->
+
   <jsp-config>
     <jsp-property-group>
       <url-pattern>*.jsp</url-pattern>
