--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,20 +9,20 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  <!-- Form Encoding Setter Filter-->
+  <!-- Filter-->
   <filter>
-    <filter-name>FormEncodingSetterFilter</filter-name>
-    <filter-class>by.asrohau.shop.controller.filter.FormEncodingSetterFilter</filter-class>
+    <filter-name>EncodingFilter</filter-name>
+    <filter-class>by.asrohau.shop.controller.filter.EncodingFilter</filter-class>
     <init-param>
       <param-name>encoding</param-name>
       <param-value>UTF-8</param-value>
     </init-param>
   </filter>
   <filter-mapping>
-    <filter-name>FormEncodingSetterFilter</filter-name>
+    <filter-name>EncodingFilter</filter-name>
     <url-pattern>/FrontController</url-pattern>
   </filter-mapping>
-  <!-- Form Encoding Setter Filter           END-->
+  <!-- Filter           END-->
   <servlet>
     <description></description>
     <display-name>FrontController</display-name>
